# N-Body-Gravitation-Simulator

./: CMakeLists.txt  README.md
Libraries/include/glad/: glad.h
res/shaders/: fragment.glsl  vertex.glsl
src/: Camera.cpp  Camera.hpp  DeltaTime.cpp  DeltaTime.hpp  InputHandler.cpp  InputHandler.hpp  Particles.cpp  Particles.hpp  Shader.cpp  Shader.hpp  glad.c  main.cpp
